--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
-# backend/Dockerfile
 FROM python:3.9-slim
 WORKDIR /app
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
 COPY . /app
-RUN pip install flask
 CMD ["python", "app.py"]
